Added some text content to the html * Paragraphs * Unorganized lists * Nested elements * Link(<a>) Tag

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
 
 <body>
     <img src="./images/Pikachu.webp" alt="My test image" style="width: 400px; height: 500px">
+    <ul>
+        <!-- changed to list in the tutorial -->
+        <li>technologists</li>
+        <li>thinkers</li>
+        <li>builders</li>
+    </ul>
+
+    <p>Working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and
+        creators of the Web. We believe this act of human collaboration across an open platform is essential to individual
+        growth and our collective future.</p>
+    
+    <p>Read the <a href="#">Website Manifesto</a> to learn even more about the
+        values and principles that guide the pursuit of our mission.</p>
+
 </body>
 
 </html>
