--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>My test page</title>
+    <link href="styles/style.css" rel="stylesheet">
 </head>
 
 <body>
