Added Font Family

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="utf-8">
     <title>My test page</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href="styles/style.css" rel="stylesheet">
 </head>
 
 <body>
     <img src="./images/Pikachu.webp" alt="My test image" style="width: 400px; height: 500px">
+    <p>My cool website, which is made for</p>
     <ul>
         <!-- changed to list in the tutorial -->
         <li>technologists</li>
