Setting Website Theme * Added CSS to the elements * Added Script to the project Scripts/main,js * Resized hero image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <img src="./images/Pikachu.webp" alt="My test image" style="width: 400px; height: 500px">
+    <h1>Demo Website</h1>
+    <img src="./images/Pikachu.webp" alt="My test image" style="width: 250px; height: 350px">
     <p>My cool website, which is made for</p>
     <ul>
         <!-- changed to list in the tutorial -->
@@ -24,6 +25,9 @@
     
     <p>Read the <a href="#">Website Manifesto</a> to learn even more about the
         values and principles that guide the pursuit of our mission.</p>
+
+    
+    <script src="scripts/main.js"></script>
 
 </body>
 
